<resources>
    <string name="app_name">DV Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add">Add</string>
    <string name="menu_analysis">Analysis</string>
    <string name="menu_home">Home</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_search">Search</string>
    <string name="menu_manage_devices">Manage Devices</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_my_ids">My Ids</string>
    <string name="menu_events">Events</string>
    <string name="menu_about">About</string>
    <string name="menu_log_out">Log Out</string>

    <string name="message_Logout">Are you sure, you want to Logout?</string>
    <string name="message_Block_Device">Are you sure, you want to block this Device?</string>
    <string name="message_Unblock_Device">Are you sure, you want to unblock this Device?</string>
    <string name="title_confirm">Confirm</string>
</resources>
